--- a/D2L.ipynb
+++ b/D2L.ipynb
@@ -105,7 +105,7 @@
     "    * 모델이 training error를 충분히 줄이지 못한 경우\n",
     "    * 데이터가 가진 패턴을 찾아내기에 모델이 너무 단순할 수 있으며, 복잡한 모델을 사용해야 함\n",
     "\n",
-    "![Influence of model complexity on underfitting and overfitting](../img/capacity-vs-error.svg)\n",
+    "![Influence of model complexity on underfitting and overfitting](http://d2l.ai/_images/capacity-vs-error.svg)\n",
     "\n",
     "\n",
     "* 훈련 데이터의 양을 늘리는 것이 generalization에 가장 좋은 방법\n",
