--- a/D2L.ipynb
+++ b/D2L.ipynb
@@ -540,9 +540,9 @@
     "P(\\mathbf{Y} \\mid \\mathbf{X}) = \\prod_{i=1}^n P(\\mathbf{y}^{(i)} \\mid \\mathbf{x}^{(i)})\n",
     "$$ -->\n",
     "$$\n",
-    "P(\\mathbf{Y} \\mid \\mathbf{X}) = \\prod_{i=1}^n y_i \\hat{y}_i\n",
+    "P(\\mathbf{Y} \\mid \\mathbf{X}) = \\prod_{i=1}^n \\hat{y}_i^{y_i}\n",
     "$$\n",
-    "* 예시) 실제 값 = [0, 0, 1], 예측 값 = [0.3, 0.1, 0.6] $\\rightarrow$ likelihood: 0.6\n",
+    "* 예시) 예측 값 = [0.3, 0.1, 0.6], 실제 값 = [0, 0, 1] $\\rightarrow$ likelihood: 0.6\n",
     "\n",
     "<br/>\n",
     "\n",
