--- a/unit_test.ipynb
+++ b/unit_test.ipynb
@@ -30,7 +30,8 @@
     "\n",
     "\n",
     "* Life cycle of a function  \n",
-    "<img src=\"https://github.com/SSinyu/PlayGround/blob/master/fig/life_cycle_of_a_function.PNG\" width=\"550\"/> "
+    "\n",
+    "![life_cycle_of_a_function](https://raw.githubusercontent.com/SSinyu/PlayGround/master/fig/life_cycle_of_a_function.PNG)  "
    ]
   },
   {
@@ -38,6 +39,7 @@
    "metadata": {},
    "source": [
     "예시) 특정 주택에 대한 면적과 가격 정보가 tab으로 구분되어 문자열로 기록  \n",
+    "\n",
     "|area  price|\n",
     "|----|\n",
     "|\"2,081\\t314,942\\n\"|\n",
@@ -682,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/SSinyu/PlayGround/blob/master/fig/argument_type.PNG\" width=\"550\"/> "
+    "![argument_type](https://raw.githubusercontent.com/SSinyu/PlayGround/master/fig/argument_type.PNG)"
    ]
   },
   {
@@ -699,8 +701,8 @@
    "metadata": {},
    "source": [
     "* Boundary Value\n",
-    "\n",
-    "<img src=\"https://github.com/SSinyu/PlayGround/blob/master/fig/boundary_value.PNG\" width=\"550\"/> "
+    "  \n",
+    "![boundary_value](https://raw.githubusercontent.com/SSinyu/PlayGround/master/fig/boundary_value.PNG)"
    ]
   },
   {
@@ -1552,13 +1554,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/SSinyu/PlayGround/blob/master/fig/plot_diff.PNG\" width=\"550\"/> "
+    "![plot_diff](https://raw.githubusercontent.com/SSinyu/PlayGround/master/fig/plot_diff.PNG)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ssinyu')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1572,9 +1574,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c9261bf8f9d8e3668338818b391eef31c2a58bf53a7417fc2295896dd5d901f2"
