--- a/unit_test.ipynb
+++ b/unit_test.ipynb
@@ -232,72 +232,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting test_row_to_list.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile test_row_to_list.py\n",
-    "import pytest\n",
-    "from row_to_list import row_to_list\n",
-    "\n",
-    "def test_for_clean_row():\n",
-    "    assert row_to_list(\"2,081\\t314,942\\n\") == [\"2,081\", \"314,942\"]\n",
-    "\n",
-    "def test_for_missing_area():\n",
-    "    assert row_to_list(\"\\t293,410\\n\") is None # actually -> [\"\", \"293,410\"]\n",
-    "\n",
-    "def test_for_missing_tab():\n",
-    "    assert row_to_list(\"1,463238,765\\n\") is None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.8.13, pytest-7.2.0, pluggy-1.0.0\n",
-      "Matplotlib: 3.5.2\n",
-      "Freetype: 2.6.1\n",
-      "rootdir: /home/ubuntu/ssinyu/FDB\n",
-      "plugins: mock-3.10.0, mpl-0.16.1\n",
-      "collected 3 items                                                              \u001b[0m\n",
-      "\n",
-      "test_row_to_list.py \u001b[32m.\u001b[0m\u001b[31mF\u001b[0m\u001b[32m.\u001b[0m\u001b[31m                                                  [100%]\u001b[0m\n",
-      "\n",
-      "=================================== FAILURES ===================================\n",
-      "\u001b[31m\u001b[1m____________________________ test_for_missing_area _____________________________\u001b[0m\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_for_missing_area\u001b[39;49;00m():\n",
-      ">       \u001b[94massert\u001b[39;49;00m row_to_list(\u001b[33m\"\u001b[39;49;00m\u001b[33m\\t\u001b[39;49;00m\u001b[33m293,410\u001b[39;49;00m\u001b[33m\\n\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m) \u001b[95mis\u001b[39;49;00m \u001b[94mNone\u001b[39;49;00m \u001b[90m# actually -> [\"\", \"293,410\"]\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       AssertionError: assert ['', '293,410'] is None\u001b[0m\n",
-      "\u001b[1m\u001b[31mE        +  where ['', '293,410'] = row_to_list('\\t293,410\\n')\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtest_row_to_list.py\u001b[0m:8: AssertionError\n",
-      "\u001b[36m\u001b[1m=========================== short test summary info ============================\u001b[0m\n",
-      "\u001b[31mFAILED\u001b[0m test_row_to_list.py::\u001b[1mtest_for_missing_area\u001b[0m - AssertionError: assert ['', '293,410'] is None\n",
-      "\u001b[31m========================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[32m2 passed\u001b[0m\u001b[31m in 0.23s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pytest test_row_to_list.py"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -369,6 +303,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br/>\n",
+    "\n",
     "* Python은 실수를 부동소수점 방식으로 표현"
    ]
   },
@@ -394,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "ename": "AssertionError",
@@ -463,6 +401,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br/>\n",
+    "\n",
     "* 다수의 assert 활용"
    ]
   },
@@ -502,6 +442,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br/> \n",
+    "\n",
     "* 특정한 에러를 가져야 하는 경우 `pytest.raises()`"
    ]
   },
@@ -628,6 +570,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
     "* 얼마나 많은 조건을 테스트 해야 할까?\n",
     "\n",
     "예) 데이터를 입력 받아 train 및 test를 3:1로 분할\n",
@@ -691,6 +636,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
     "예시)  \n",
     "\n",
     "`row_to_list(\"2,081\\t314,942\\n\")`    return: [\"2,081\", \"314,942\"]  "
@@ -701,6 +650,8 @@
    "metadata": {},
    "source": [
     "* Boundary Value\n",
+    "    - x axis : \\t 의 개수\n",
+    "    - y axis : missing 여부\n",
     "  \n",
     "![boundary_value](https://raw.githubusercontent.com/SSinyu/PlayGround/master/fig/boundary_value.PNG)"
    ]
@@ -739,8 +690,8 @@
     "\n",
     "* Test Driven Development (TDD)\n",
     "    * 기능 개발 전에 unit test 부터 작성한다  \n",
-    "    -> unit test를 미루지 않게 된다  \n",
-    "    -> 명확하게 필요한 기능을 정의하여 개발에 도움이 된다"
+    "        -> unit test를 미루지 않게 된다  \n",
+    "        -> 명확하게 필요한 기능을 정의하여 개발에 도움이 된다"
    ]
   },
   {
@@ -850,7 +801,7 @@
    "source": [
     "%%writefile test_preprocessing_helpers.py\n",
     "import pytest\n",
-    "from data.preprocessing_helpers import row_to_list, conver_to_int\n",
+    "from data.preprocessing_helpers import row_to_list, convert_to_int\n",
     "\n",
     "def test_on_no_tab_no_missing_value():\n",
     "    ...\n",
@@ -877,7 +828,7 @@
    "source": [
     "%%writefile test_preprocessing_helpers.py\n",
     "import pytest\n",
-    "from data.preprocessing_helpers import row_to_list, conver_to_int\n",
+    "from data.preprocessing_helpers import row_to_list, convert_to_int\n",
     "\n",
     "class TestRowToList:\n",
     "    def test_on_no_tab_no_missing_value(self):\n",
@@ -949,7 +900,7 @@
     "    │               ├── TestRowToList (class)\n",
     "    │               └── TestConvertToInt (class)\n",
     "    │                        ├── test_on_string_with_one_comma (function)\n",
-    "    |                        └── ...\n",
+    "    │                        └── ...\n",
     "    ├── features/\n",
     "    │   ├── __init__.py\n",
     "    │   └── test_as_numpy.py\n",
@@ -1246,7 +1197,7 @@
     "<br/>\n",
     "\n",
     "* 파일을 입력받는 경우, 테스트를 위해 임시로 파일을 만들고 테스트 후 제거해야 한다  \n",
-    "-> `@pytest.fixture` 사용"
+    "    -> `@pytest.fixture` 사용"
    ]
   },
   {
@@ -1392,7 +1343,6 @@
     "    return return_values[comma_separated_integer_string]\n",
     "\n",
     "\n",
-    "from unittest.mock import call\n",
     "class TestPreprocess(object):\n",
     "    def test_on_raw_data(self, raw_and_clean_data_file, mocker):\n",
     "        raw_path, clean_path = raw_and_clean_data_file\n",
